[PRMT-2865] Added high level test for new fragment endpoint
