# src/api/health-record-transfers/index.js
@@ -1,7 +1,7 @@
 import express from 'express';
-import { authenticateRequest } from '../../middleware/auth';
-import { validate } from '../../middleware/validation';
-import { healthRecordTransfers, healthRecordTransferValidation } from './health-record-transfers';
+import {authenticateRequest} from '../../middleware/auth';
+import {validate} from '../../middleware/validation';
+import {healthRecordTransfers, healthRecordTransferValidation} from './health-record-transfers';
 
 export const healthRecordTransferRouter = express.Router();
 
@@ -11,4 +11,18 @@ healthRecordTransferRouter.post(
   healthRecordTransferValidation,
   validate,
   healthRecordTransfers
+);
+
+const healthRecordTransfersFragment = async (req, res) => {
+  res.sendStatus(204);
+}
+
+healthRecordTransferRouter.post(
+  '/fragment',
+  authenticateRequest,
+  [
+    // some validation
+  ],
+  validate,
+  healthRecordTransfersFragment
 );
